<resources>
    <string name="app_name">FlupperDemo</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="discounted_price">Discounted Price</string>
    <string name="select_color">Choose Color</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="select_city">Choose City</string>
    <string name="enter_store_name">Enter Store Name</string>
    <string name="close">CLOSE</string>
    <string name="ok">OK</string>
    <string name="add_photo">Add Photo!</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="cancel">Cancel</string>
    <string name="product_dashboard">Product Dashboard</string>
    <string name="add_product">Add Product</string>
</resources>
