<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#F3F3F3"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/add_photo"
        android:gravity="center"
        android:textColor="#B0B0B0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/choose_from_gallery"
        style="@style/action_button_bs"
        android:id="@+id/btn_gallery"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/take_photo"
        style="@style/action_button_bs"
        android:textAllCaps="false"
        android:id="@+id/btn_camera"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginBottom="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/cancel"
        android:textColor="#D04D5B"
        style="@style/action_button_bs"
        android:id="@+id/btn_cancel"/>
</androidx.appcompat.widget.LinearLayoutCompat>