<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:padding="15dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_10">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/store_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_store_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="right"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_close"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_ok"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok" />
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
